--- a/boardgame.html
+++ b/boardgame.html
@@ -14,7 +14,7 @@
             position: relative;
             width: 100%;
             height: 200px;
-            background: url('img/S__70680585') no-repeat center center;
+            background: url('img/S__70680585.jpg') no-repeat center center;
             background-size: cover;
         }
         .content {
@@ -91,7 +91,7 @@
         <h2>ภาพ/วิดิโอ กิจกรรม</h2>
 
         <div class="main-image">
-            <img src="img/S__70680596" alt="ภาพหลักกิจกรรม">
+            <img src="img/S__70680596jpg" alt="ภาพหลักกิจกรรม">
         </div>
 
         <div class="container">
