--- a/boardgame.html
+++ b/boardgame.html
@@ -5,67 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cyber boardgame</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: "Kanit", serif;
-        }
-        .header-image {
-            position: relative;
-            width: 100%;
-            height: 200px;
-            background: url('img/bg.jpg') no-repeat center center;
-            background-size: cover;
-        }
-        .content {
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        .content h4 {
-            text-align: center;
-            color: #9f9f9f;
-        }
-        ul {
-            text-align: left;
-            padding-left: 30px; /* เพิ่มระยะห่างจากขอบ */
-        }
-        ol {
-            text-align: left;
-            list-style-type: decimal; /* ตัวเลขเรียงลำดับ */
-            padding-left: 30px; /* เพิ่มระยะห่างจากขอบ */
-        }
-        .main-image {
-            text-align: center;
-            margin-bottom: 10px;
-        }
-        .main-image img {
-            width: 80%; /* ปรับขนาดภาพใหญ่ด้านนอก */
-            max-width: 800px; /* กำหนดความกว้างสูงสุด */
-            border-radius: 10px;
-        }
-        .container {
-            display: flex;
-            justify-content: space-between; /* เพิ่มระยะห่างระหว่างกรอบ */
-            gap: 10px; /* ช่องว่างระหว่างกรอบ */
-            padding: 10px;
-        }
-        .box {
-            flex: 1; /* ให้แต่ละช่องมีขนาดเท่าๆ กัน */
-            max-width: 33%; /* จำกัดความกว้างแต่ละกรอบ */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .box img {
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-            object-fit: cover; /* ปรับภาพให้เต็มกรอบ */
-        }
-        a {
-            padding: 5px;
-        }
-    </style>
+    <!-- ลิงก์ไปยังไฟล์ CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <div class="header-image"></div>
+    <div class="content">
+        <h1>NCSA Boardgame with Seven Group</h1>
+        <h4>มาร่วมสนุกไปพร้อมเกร็ดความรู้ในโลกไซเบอร์ และข้อควรระวังเป็นข้อคิด !</h4>
+        
+        <p>กิจกรรม Cyber Board Game เป็นกิจกรรมที่นำความรู้ แนวคิดเกี่ยวกับด้านความปลอดภัยไซเบอร์ มาประยุกต์ใช้ในรูปแบบเกมกระดาน...</p>
+        <h2>ข้อมูลกิจกรรม</h2>
+        <ul>
+            <li>สถานที่ : อาคาร 17 ศูนย์เรียนรวม 3</li>
+            <li>จำนวนผู้เข้าร่วม : 3 คน</li>
+            <li>ช่วงเวลา : 12.30 - 13.00 น.</li>
+        </ul>
+        <h2>วิธีเล่น</h2>
+        <ol>
+            <li>นำตัวผู้เล่นมาที่จุดเริ่มต้นและผลัดกันทอยลูกเต๋าผู้เล่นที่ได้แต้มมากจะเป็นผู้เล่นก่อน...</li>
+            <li>ผู้เล่นผลัดกันทอยลูกเต๋า...</li>
+        </ol>
+        <h2>ภาพ/วิดิโอ กิจกรรม</h2>
+
+        <div class="main-image">
+            <img src="img/grp.JPG" alt="ภาพหลักกิจกรรม">
+        </div>
+
+        <div class="container">
+            <div class="box">
+                <img src="img/BTS.jpg" alt="ภาพ 2">
+            </div>
+            <div class="box">
+                <img src="img/BTS2.JPG" alt="ภาพ 3">
+            </div>
+            <div class="box">
+                <img src="img/BTS3.JPG" alt="ภาพ 4">
+            </div>
+        </div>
+        <a href="https://drive.google.com/file/d/1swEFVGy7NZIjdUpkvj9tQjwjgMvlxWBd/view">วิดิโอกิจกรรม</a>
+        
+        <h2>สรุปกิจกรรม: ความรู้และการป้องกันภัยคุกคามไซเบอร์</h2>
+        ...
+    </div>
+</body>
+</html>
