--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
         <div class="container">
             <div class="box">
-                <img src="img/S__70680585.jpg" alt="ภาพ 2">
+                <img src="img/S__25616398.jpg" alt="ภาพ 2">
             </div>
             <div class="box">
-                <img src="img/S__70680585.jpg" alt="ภาพ 3">
+                <img src="img/BTS.jpg" alt="ภาพ 3">
             </div>
             <div class="box">
                 <img src="img/S__70680588.jpg" alt="ภาพ 4">
