--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>NCSA Boardgame with Seven Group</h1>
         <h4>มาร่วมสนุกไปพร้อมเกร็ดความรู้ในโลกไซเบอร์ และข้อควรระวังเป็นข้อคิด !</h4>
         
-        <p>กิจกรรม Cyber Board Game เป็นกิจกรรมที่นำความรู้ แนวคิดเกี่ยวกับด้านความปลอดภัยไซเบอร์ มาประยุกต์ใช้ในรูปแบบเกมกระดาน...</p>
+        <p>กิจกรรม Cyber Board Game เป็นกิจกรรมที่นำความรู้ แนวคิดเกี่ยวกับด้านความปลอดภัยไซเบอร์ มาประยุกต์ใช้ในรูปแบบเกมกระดาน มีการออกแบบเนื้อหา เช่น ธีมเกม กฎ กติกา และสถานการณ์สมมติที่เกี่ยวข้องกับภัยคุกคามไซเบอร์ เพื่อสร้างความเข้าใจง่ายในเนื้อหาความรู้ และความสนุกสนานในการเล่นเกม</p>
         <h2>ข้อมูลกิจกรรม</h2>
         <ul>
             <li>สถานที่ : อาคาร 17 ศูนย์เรียนรวม 3</li>
@@ -23,8 +23,9 @@
         </ul>
         <h2>วิธีเล่น</h2>
         <ol>
-            <li>นำตัวผู้เล่นมาที่จุดเริ่มต้นและผลัดกันทอยลูกเต๋าผู้เล่นที่ได้แต้มมากจะเป็นผู้เล่นก่อน...</li>
-            <li>ผู้เล่นผลัดกันทอยลูกเต๋า...</li>
+            <li>นำตัวผู้เล่นมาที่จุดเริ่มต้นและผลัดกันทอยลูกเต๋าผู้เล่นที่ได้แต้มมากจะเป็นผู้เล่นก่อนตามลำดับคะแนน</li>
+            <li>ผู้เล่นผลัดกันทอยลูกเต๋า และเดินตามกระดานเท่ากับแต้มที่ได้ หากผู้เล่นเดินตกไปยังช่องพิเศษ ให้ผู้เล่นปฏิบัติตามคำสั่งเท่านั้น</li>
+            <li>ผู้ที่มาถึงเส้นชัยก่อนคือผู้ชนะ</li>
         </ol>
         <h2>ภาพ/วิดิโอ กิจกรรม</h2>
 
