--- a/index.html
+++ b/index.html
@@ -26,15 +26,41 @@
 
         <h2>ภาพกิจกรรม</h2>
         <div class="main-image">
-            <img src="img/grp.JPG" alt="ภาพกิจกรรมหลัก">
+            <img src="img/S__70680596.jpg" alt="ภาพกิจกรรมหลัก">
         </div>
         <div class="container">
-            <div class="box"><img src="img/BTS.jpg" alt="ภาพ 1"></div>
+            <div class="box"><img src="img/S__25616398.jpg" alt="ภาพ 1"></div>
             <div class="box"><img src="img/BTS2.JPG" alt="ภาพ 2"></div>
-            <div class="box"><img src="img/BTS3.JPG" alt="ภาพ 3"></div>
+            <div class="box"><img src="img/S__70680588.jpg" alt="ภาพ 3"></div>
         </div>
 
         <a href="https://drive.google.com/file/d/1swEFVGy7NZIjdUpkvj9tQjwjgMvlxWBd/view" target="_blank">ดูวิดีโอกิจกรรม</a>
+     <h2>สรุปกิจกรรม: ความรู้และการป้องกันภัยคุกคามไซเบอร์</h2>
+        <h3>การคิดวิเคราะห์</h3>
+        <li style="padding-left: 20px;">ผู้ทำกิจกรรมและผู้เข้าร่วมกิจกรรม ได้ร่วมกันคิดวิเคราะห์สถานการณ์ พูดคุยเกี่ยวกับปัญหาภัยคุกคามไซเบอร์ และแนะนำแนวทางการป้องกัน แก้ไขปัญหา</li>
+        
+        <h3>การทำงานเป็นทีม</h3>
+        <li style="padding-left: 20px;">มีการวางแผนร่วมกันจัดกิจกรรม เริ่มจากสถานที่ กลุ่มเป้าหมาย และเนื้อหากิจกรรม ทุกคนช่วยทำให้กิจกรรมนี้ผ่านไปด้วยดี และมีประโยชน์ต่อผู้เข้าร่วม</li>
+            
+        <h3>ความรู้ด้านความปลอดภัยไซเบอร์</h3>
+        <li style="padding-left: 20px;" >กิจกรรมนี้ ช่วยส่งเสริมความรู้ ความเข้าใจเกี่ยวกับภัยคุกคามไซเบอร์ และวิธีป้องกัน ทำให้มีความรู้เพิ่มเติมมากขึ้น</li>
+
+        <h3>สิ่งที่ผู้เข้าร่วมได้เรียนรู้</h3>
+        <li style="padding-left: 20px;" >เนม: ได้ความรู้การใช้โซเชียลมีเดียอย่างระมัดระวังและถูกต้องมากขึ้น และเข้าใจสิ่งที่ควรหรือไม่ควรทำ</li>
+        <li style="padding-left: 20px;" >แนน: ได้รู้ถึงความสำคัญของการอ้างอิงแหล่งที่มา การตั้งค่าโซเชียลมีเดียให้เป็นส่วนตัว และหลีกเลี่ยงการโพสต์ข้อความด้วยอารมณ์หรือคำหยาบคาย</li>
+        <li style="padding-left: 20px;" >แวน: ได้ความรู้เกี่ยวกับการใช้สื่อออนไลน์อย่างระมัดระวัง การใช้คำพูด การอ้างอิงข้อมูลให้ถูกต้อง และได้ความสนุกที่ได้ทำกิจกรรมร่วมกับเพื่อนๆ</li>
+
+        <h2>สมาชิก</h2>
+        <ul>
+            <li><a href="#">พัทธราภา ทรัพย์อำพัน</a></li>
+            <li><a href="https://pisitchaiwongsopon.github.io/bordgame.html">พิสิฐชัย วงศ์โสภณ</a></li>
+            <li><a href="https://wilaiphan.github.io/boardgame">วิไลพรรณ กุลเชษฐ์</a></li>
+            <li><a href="https://panita18.github.io/boardgame">ปณิตา ยะพลหา</a></li>
+            <li><a href="https://wariisara.github.io/boardgame">วริศรา แย้มมา</a></li>
+            <li><a href="https://aum8362.github.io/BoardGame.html">ปาณิสรา พวงอุไร</a></li>
+            <li><a href="https://suphat00.github.io/boardgame">สุพัตรา ประสมทรัพย์</a></li>
+        </ul>
     </div>
+    <a href= "https://wilaiphan.github.io/all-work"> All Work </a>
 </body>
 </html>
