--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>NCSA Boardgame with Seven Group</h1>
         <h4>มาร่วมสนุกไปพร้อมเกร็ดความรู้ในโลกไซเบอร์ และข้อควรระวังเป็นข้อคิด !</h4>
 
-        <p>กิจกรรม Cyber Board Game เป็นกิจกรรมที่นำความรู้ แนวคิดเกี่ยวกับด้านความปลอดภัยไซเบอร์ มาประยุกต์ใช้ในรูปแบบเกมกระดาน...</p>
+        <p>กิจกรรม Cyber Board Game เป็นกิจกรรมที่นำความรู้ แนวคิดเกี่ยวกับด้านความปลอดภัยไซเบอร์ มาประยุกต์ใช้ในรูปแบบเกมกระดาน มีการออกแบบเนื้อหา เช่น ธีมเกม กฎ กติกา และสถานการณ์สมมติที่เกี่ยวข้องกับภัยคุกคามไซเบอร์ เพื่อสร้างความเข้าใจง่ายในเนื้อหาความรู้ และความสนุกสนานในการเล่นเกม</p>
 
         <h2>ข้อมูลกิจกรรม</h2>
         <ul>
@@ -23,6 +23,12 @@
             <li>จำนวนผู้เข้าร่วม: 3 คน</li>
             <li>ช่วงเวลา: 12.30 - 13.00 น.</li>
         </ul>
+        <h2>วิธีเล่น</h2>
+        <ol>
+            <li>นำตัวผู้เล่นมาที่จุดเริ่มต้นและผลัดกันทอยลูกเต๋าผู้เล่นที่ได้แต้มมากจะเป็นผู้เล่นก่อนตามลำดับคะแนน</li>
+            <li>ผู้เล่นผลัดกันทอยลูกเต๋า และเดินตามกระดานเท่ากับแต้มที่ได้ หากผู้เล่นเดินตกไปยังช่องพิเศษ ให้ผู้เล่นปฏิบัติตามคำสั่งเท่านั้น</li>
+            <li>ผู้ที่มาถึงเส้นชัยก่อนคือผู้ชนะ</li>
+        </ol>
 
         <h2>ภาพกิจกรรม</h2>
         <div class="main-image">
@@ -30,7 +36,7 @@
         </div>
         <div class="container">
             <div class="box"><img src="img/S__25616398.jpg" alt="ภาพ 1"></div>
-            <div class="box"><img src="img/BTS2.JPG" alt="ภาพ 2"></div>
+            <div class="box"><img src="img/BTS.jpg" alt="ภาพ 2"></div>
             <div class="box"><img src="img/S__70680588.jpg" alt="ภาพ 3"></div>
         </div>
 
@@ -52,7 +58,7 @@
 
         <h2>สมาชิก</h2>
         <ul>
-            <li><a href="#">พัทธราภา ทรัพย์อำพัน</a></li>
+            <li><a href="https://6530250140.github.io/boardgame.html/">พัทธราภา ทรัพย์อำพัน</a></li>
             <li><a href="https://pisitchaiwongsopon.github.io/bordgame.html">พิสิฐชัย วงศ์โสภณ</a></li>
             <li><a href="https://wilaiphan.github.io/boardgame">วิไลพรรณ กุลเชษฐ์</a></li>
             <li><a href="https://panita18.github.io/boardgame">ปณิตา ยะพลหา</a></li>
