--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
             <li><a href="https://suphat00.github.io/boardgame">สุพัตรา ประสมทรัพย์</a></li>
         </ul>
     </div>
-    <a href= "https://wilaiphan.github.io/all-work"> All Work </a>
+    <a href= "https://6530250140.github.io/"> About Me </a>
 </body>
 </html>
